# dotfiles

./: .Xmodmap  .Xresources  .alias-bsd  .alias-bsd-fish  .alias-fish  .alias-linux  .alias-main  .alias-master  .alias-neovim  .alias-neovim.fish  .alias.env  .alias.env.fish  .bash_profile  .bashrc  .bitchxrc  .castgetrc  .ctags  .curlrc  .emacs  .emacs.doom  .emacs.evil  .face  .fetchmailrc  .function_gemerge  .ghci  .gitattributes  .gitconfig  .gitignore  .gitmodules  .gtkrc-2.0  .login  .lynx.cfg  .muttrc  .npmrc  .p10k.zsh  .profile  .screenrc  .signature  .spacemacs  .spectrwm.conf  (+454 more)
.BurpSuite/: UserConfigCommunity.json  WorkspaceConfigCommunity.json
.arduino15/: arduino-cli.yaml  preferences.txt
.config/: QtProject.conf  mimeapps.list  moserial.conf  starship-bak.toml  starship.toml  sys-line.md  zoomus.conf
.config/xmonad/: build  stack.yaml  xmonad-config.cabal  xmonad.hs
.config/xmonad/lib/Local/: Colors.hs  DzenLogHook.hs  KeyBindings.hs  Layouts.hs  ManagedHook.hs  MouseBinding.hs  PolybarLogHook.hs  Prompts.hs  Workspaces.hs
.docker/: config.json
.doom.d/: config.el  init.el
.elinks/: elinks.conf
.fonts/: fonts.conf
.gnupg/: gpg-agent.conf  scdaemon.conf
.irssi/: cmdhistory  config
.mutt/: account.com.gmail.brian.henning  account.com.gmail.henninb  account.com.gmail.henninb01  account.com.gmail.henninb02  account.com.gmail.henninb03  account.com.gmail.henninb04  account.com.gmail.henninb05  account.com.gmail.henninb06  account.com.gmail.henninb07  account.com.gmail.henninb08
.ncmpcpp/: config
.newsboat/: config  urls
.smb/: smbnetfs.conf
.ssh/: authorized_keys  config  known_hosts
.stack/: config.yaml
.stellarium/: config.ini
.xmonad/: Makefile  bar  build  package.yaml  readme.md  stack.yaml  system-overview  width.hs  xmonad-archlinux-xrdp.hs  xmonad-config.cabal  xmonad-default.hs  xmonad-example.hs  xmonad-freebsd.hs  xmonad-master.hs  xmonad-polybar.hs  xmonad-rice.hs  xmonad-simple.hs  xmonad-test.hs  xmonad.hs  (+2 more)
rust/example_rest_json/: .env  Cargo.toml  Dockerfile  run.sh
rust/example_rest_json/src/: main.rs  test.rs
(+2404 files in other folders)
