cabal-version: 1.12

name:           xmonad-config
version:        0.1.0.0
author:         Brian Henning
maintainer:     Brian Henning
copyright:      2021 Brian Henning
license:        BSD3
build-type:     Simple

library
  exposed-modules:
      Local.Colors
      Local.DzenLogHook
      Local.KeyBindings
      Local.Layouts
      Local.ManagedHook
      Local.MouseBinding
      Local.PolybarLogHook
      Local.Prompts
      Local.Workspaces
  other-modules:
      Paths_xmonad_config
  hs-source-dirs:
      lib
  build-depends:
      X11
    , base >=4.7 && <5
    , bytestring
    , containers
    , text
    , utf8-string
    , directory
    , safe-exceptions
    , xmonad >=0.17
    , xmonad-contrib >=0.17
  default-language: Haskell2010

executable xmonad-config
  main-is: xmonad.hs
  other-modules:
      Paths_xmonad_config
  hs-source-dirs:
      ./.
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      X11
    , base >=4.7 && <5
    , bytestring
    , containers
    , utf8-string
    , directory
    , safe-exceptions
    , xmonad >=0.17
    , xmonad-config
    , xmonad-contrib >=0.17
  default-language: Haskell2010
