[package]
name = "example_rest_json"
version = "0.1.0"
authors = ["Brian"]
edition = "2018"

[dependencies]
#actix-web = "1.0.9"
actix-web = "2.0.0-alpha.6"
actix-rt = "1.0.0"

bytes = "0.4"
futures = "0.1"
env_logger = "*"
log = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
dotenv = "*"
log4rs = "*"
uuid = { version = "0.7", features = ["serde", "v4"] }

[profile.release]

[profile.dev]
